# scheduler

./: .env  Cargo.toml  README.md
client/: Cargo.toml
client/src/: client.rs  main.rs  map.rs
schema/: Cargo.toml  build.rs
schema/proto/: server.proto
schema/src/: entities.rs  lib.rs  runner.rs  scheduler.rs
server/: Cargo.toml
server/src/: lib.rs  main.rs  runner.rs  scheduler.rs
test_data/: destinations.csv  orders.csv
