[workspace]
resolver = "2"
members = [
    "client",
    "schema",
    "server",
]

[workspace.dependencies]
dotenv = "0.15"
env_logger = "0.10"
futures = "0.3"
itertools = "0.12"
log = "0.4"
once_cell = "1.18"
prost = "0.12"
prost-types = "0.12"
tokio = { version = "1.33" }
tokio-stream = "0.1"
tonic = "0.10"
tonic-build = "0.10"
ulid = "1.1"
